practice/07.network-abstractions/2.ingress-and-services/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-np
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: my-app
  type: NodePort
